fixed: styling issues on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -121,6 +121,8 @@
   }
 }
 
-html {
+html,
+body {
   scroll-behavior: smooth;
+  overscroll-behavior: none;
 }
